# ranma

./: .gitignore  .release-please-config.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
app/: Package.swift
app/Sources/: BarContentView.swift  BarViewModel.swift  BarWindow.swift  ImageCache.swift  RanmaAppDelegate.swift  WindowSizer.swift  main.swift
crates/ranma-cli/: Cargo.toml
crates/ranma-cli/src/: main.rs
crates/ranma-core/: Cargo.toml
crates/ranma-core/src/: bridge.rs  lib.rs  state.rs
crates/ranma-core/src/ipc/: protocol.rs  server.rs
crates/uniffi-bindgen/: Cargo.toml
docs/: widget-guide.md
examples/: README.md
examples/all/: init
examples/battery/: init
examples/battery/plugins/: battery.py
examples/clock/: init
examples/clock/plugins/: clock.py
examples/cpu-mem/: init
examples/cpu-mem/plugins/: cpu_mem.py
examples/island/: init
examples/island/plugins/: island.py
examples/mic-camera/: init
examples/mic-camera/plugins/: mic_camera.py
examples/now-playing/: init
examples/now-playing/plugins/: now_playing.py
examples/pixel-runner/: init
examples/pixel-runner/plugins/: pixel_runner.py
examples/progress-bar/: init
examples/progress-bar/plugins/: progress_bar.py
examples/unified/: init
examples/unified-light/: init
examples/unified-neon/: init
examples/unified-pastel/: init
examples/unified-retro/: init
examples/unified-transparent/: init
examples/wifi/: init
examples/yashiki-workspace/: config.json  init
scripts/: build.sh
(+8 files in other folders)
