[package]
name = "ranma-core"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
uniffi = { version = "0.29", features = ["cli"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
thiserror = "2"
